[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "langfuse-codex"
version = "0.1.0"
description = "Codex hook ingestor that ships transcript-derived traces to Langfuse."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langfuse>=3.10.1",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[project.scripts]
codex-langfuse-enqueue = "langfuse_codex.enqueue:main"
codex-langfuse-hook = "langfuse_codex.hook:main"
codex-langfuse-launchd = "langfuse_codex.launchd:main"
codex-langfuse-sender = "langfuse_codex.sender:main"
codex-langfuse-service = "langfuse_codex.service:main"

[tool.hatch.build.targets.wheel]
packages = ["src/langfuse_codex"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
